# 3.Semester

3-semesterprojekt/: CMakeLists.txt  camera.cpp  camera.h  camera_cali.cpp  camera_cali.h  main.cpp  picture_handling.cpp  picture_handling.h  robotController.cpp  robotController.h  tcp.cpp  tcp.h
build-3-semesterprojekt-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-3-semesterprojekt-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-5c8f1f5d2dc84d98258e.json  cmakeFiles-v1-fee9d7140402cd2eb8da.json  codemodel-v2-8ee59deaaca6adc7494c.json  index-2022-09-19T09-41-52-0770.json  target-3-semesterprojekt-Debug-260f4db78b54d0ef8901.json
